kubernetes/apps/network/external-dns-unifi/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: external-dns-unifi-egress-gateway
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/instance: external-dns-unifi
    egress:
      - toFQDNs:
          - matchName: unifi.internal
        toPorts:
          - ports:
              - port: "443"
